# ted-jr

./: .gitignore  package-lock.json  package.json
android/: .env.example  .gitignore  README.md
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
app/login/: page.tsx
app/register/: page.tsx
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/auth/: deps.py
backend/app/core/: config.py  supabase.py
backend/app/routes/: categories.py  fdc.py  grocery_lists.py  products.py  routes.py  scraper.py  stores.py
backend/app/scraper/: config.py  db_writer.py  keyfood.py  shoprite.py
backend/app/services/: fdc.py  grocery_list_service.py  product_service.py  route_service.py  store_service.py
backend/scripts/: save_keyfood_session.py  save_session.py  scrape_keyfood.py  scrape_shoprite.py
backend/tests/: test_route_service.py  test_routes_endpoint.py
backend/tests/scraper/: test_shoprite_models.py
docs/plans/: 2026-03-17-store-map.md
ios/: README.md
ios/Neighborly/: .gitignore  Info.plist
ios/Neighborly/Config/: Secrets.xcconfig.template
ios/Neighborly/Neighborly/: APIService.swift  AppConfig.swift  AuthController.swift  ContentView.swift  GroceryListView.swift  HomeView.swift  LoginView.swift  MainTabView.swift  MapboxRouteMap.swift  (+7 more)
ios/Neighborly/Neighborly.xcodeproj/: project.pbxproj
web/: .gitignore  README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: ProfileDropdown.tsx  StoreMap.tsx
(+53 files in other folders)
